@@ -58,7 +58,7 @@ void KWStyleManager::updateAllStyleLists()
 
 void KWStyleManager::updateStyleListOrder( const QStringList & list)
 {
-    m_doc->updateStyleListOrder( list );
+    m_doc->styleCollection()->updateStyleListOrder( list );
 }
 
 
