@@ -249,6 +249,7 @@ Changes between KWord-1.2-RC1 and KWord-1.2
 Bugfixes:
 - Fix update ruler tabs when we switch between text object
 - Fix move up/down style
+- Fix move up/down table/frame style
 
 Layout:
 - Fixed layout of paragraph numbering in Right-To-Left mode.
